# CTRSDK-4_2_5

./: .gitignore  CMakeLists.txt  README.md
include/GLES2/: gl2.h  gl2CTR.h  gl2extern.h
include/nn/: Assert.h  Handle.h  Module.h  Result.h  WithInitialize.h  applet.h  cfg.h  dbg.h  dev.h  dsp.h  err.h  fnd.h  fs.h  gx.h  hid.h  hidlow.h  init.h  math.h  module.h  os.h  ro.h  snd.h  srv.h  svc.h  types.h  ulcd.h  version.h
include/nn/CTR/: CTR_ProgramId.h
include/nn/applet/: applet_All.h  applet_Api.h  applet_Connect.h  applet_Info.h  applet_Paramaters.h  applet_Wrapper.h
include/nn/camera/: camera_Api.h  camera_Ipc.h  camera_Paramaters.h
include/nn/cfg/: cfg_RegionCode.h  cfg_UserInfo.h
include/nn/crypto/: crypto_HashBase.h  crypto_HashContextBase.h  crypto_Sha1.h  crypto_Sha256Context.h  crypto_Sha512BitContext.h  crypto_ShaBlock512BitContext.h
include/nn/dbg/: dbg_Break.h  dbg_DebugString.h  dbg_PrintResult.h  dbg_Printf.h
include/nn/dbm/: dbm_HierarchicalRomFIleTableTemplate.h  dbm_HierarchicalRomFileTable.h  dbm_HierarchicalRomFileTableTemplate.impl.h  dbm_KeyValueRomStorageTemplate.h  dbm_Parameters.h  dbm_Result.h  dbm_RomPathTool.h
include/nn/drivers/: drivers_Ro.h
include/nn/fnd/: fnd_Allocator.h  fnd_DateTime.h  fnd_ExpHeap.h  fnd_FrameHeap.h  fnd_HeapBase.h  fnd_InterlockedVariable.h  fnd_Intrusive.h  fnd_IntrusiveQueue.h  fnd_Result.h  fnd_TimeSpan.h  fnd_UnitHeap.h
include/nn/font/: font_CharStrmReader.h  font_CharTypes.h  font_DrawerTypes.h  font_Font.h  font_RectDrawerCommand.h  font_ResFont.h  font_ResFontBase.h  font_ResourceFormat.h  font_Types.h
include/nn/fs/: fs_Api.h  fs_Directory.h  fs_FileBase.h  fs_FileInputStream.h  fs_FileOutputStream.h  fs_FileStream.h  fs_FileSystemBase.h  fs_IPositionable.h  fs_IStream.h  fs_IpcDirectory.h  fs_IpcFile.h  fs_IpcFileSystem.h  fs_Paramaters.h  fs_Parameters.h  fs_Result.h  fs_Types.h
include/nn/fslow/: fslow_Path.h  fslow_QueryOptimalBucketCount.h
include/nn/gr/: gr_Combiner.h
include/nn/gxlow/: gxlow_CmdReqQueue.h  gxlow_GpuClient.h  gxlow_InterruptReceiver.h  gxlow_Management.h  gxlow_Misc.h  gxlow_Parameters.h  gxlow_RegAccess.h  gxlow_SystemUse.h
include/nn/hardware/: hardware_RegAccess.h
include/nn/hid/: hid_All.h  hid_Api.h
include/nn/hidlow/: hidlow_All.h  hidlow_Api.h  hidlow_LifoRing.h  hidlow_Utils.h
include/nn/init/: init_Alloc.h  init_Default.h  init_StartUp.h
include/nn/math/: math_Arithmetic.h  math_Constant.h  math_Matrix23.h  math_Matrix33.h  math_Matrix34.h  math_Matrix44.h  math_Misc.h  math_Quaternion.h  math_Transform.h  math_Triangular.h  math_Utility.h  math_Vec2.h  math_Vec3.h  math_Vec4.h
include/nn/ndm/: ndm_Interface.h  ndm_Setup.h  ndm_UserControl.h
include/nn/nstd/: nstd_Mem.h  nstd_Printf.h
include/nn/os/: os_AddressSpaceManager.h  os_Api.h  os_AutoStackManager.h  os_CriticalSection.h  os_Default.h  os_ErrorHandlerSelect.h  os_Event.h  os_Initialize.h  os_LightEvent.h  os_LockPolicy.h  os_Memory.h  os_MemoryBlock.h  os_MemoryBlockBase.h  os_Mutex.h  os_Result.h  os_Semaphore.h  os_SharedInfo.h  os_SharedMemory.h  os_SimpleLock.h  os_StackBuffer.h  os_StackMemory.h  os_Synchronization.h  os_Task.h  os_Thread.h  os_ThreadLocal.h  os_ThreadLocalStorage.h  os_ThreadPool.h  os_Tick.h  os_TransferMemoryBlock.h  os_Types.h  os_WaitableCounter.h
include/nn/pxi/: pxi_Api.h
include/nn/ro/: ro_Api.h  ro_ApiException.h  ro_CodeChecker.h  ro_DebugInfo.h  ro_DynamicLoader.h  ro_Module.h  ro_ObjectFile.h  ro_Offset.h  ro_RegistrationList.h  ro_Result.h  ro_Types.h
include/nn/srv/: srv_Api.h  srv_EventNotication.h  srv_Manager.h  srv_Service.h  svc_Api.h
include/nn/ssl/: ssl_CommonImpl.h  ssl_LibManager.h
include/nn/svc/: svc_Api.h  svc_Stub.h
include/nn/util/: util_Color.h  util_Crc.h  util_FlagsEnum.h  util_Int64.h  util_NonCopyable.h  util_Result.h  util_SizedEnum.h  util_TypeTraits.h
src/gles2/: gles2.c  sysman.h
src/nn/applet/: applet_Api.cpp  applet_ClientThread.cpp  applet_Connect.cpp  applet_Info.cpp  applet_InitialParamaters.cpp  applet_Wrapper.cpp
src/nn/camera/: camera_Api.cpp  camera_Camera.cpp  camera_Ipc.cpp
src/nn/cfg/: cfg_Api.cpp  cfg_ApiInit.cpp  cfg_ApiSys.cpp  cfg_DetailApi.cpp  cfg_IpcInit.cpp  cfg_IpcSys.cpp  cfg_IpcUser.cpp
src/nn/crypto/: crypto_Sha256ARM.cpp  crypto_ShaBlock512BitContext.cpp
src/nn/dbg/: dbg_Break.cpp  dbg_DebugString.cpp  dbg_Printf.cpp
src/nn/dbm/: dbm_RomPathTool.cpp
src/nn/dev/: dev_Api.cpp  dev_Ipc.cpp
src/nn/example/: example_Api.cpp  example_Api.h
src/nn/fnd/: fnd_DateTime.cpp  fnd_ExpHeap.cpp  fnd_FrameHeapBase.cpp  fnd_HeapBase.cpp  fnd_UnitHeap.cpp
src/nn/font/: font_ResFont.cpp  font_ResFontBase.cpp
src/nn/fs/: fs_Api.cpp  fs_FileBase.cpp  fs_FileInputStream.cpp  fs_FileStream.cpp  fs_FileSystemBase.cpp  fs_IPostionable.cpp  fs_IStream.cpp  fs_IpcDirectory.cpp  fs_IpcFile.cpp  fs_IpcFileSystem.cpp
src/nn/fslow/: fslow_QueryOptimalBucketCount.cpp
(+306 files in other folders)
